Fix spacing for Checkout Welcome component screen

--- a/ui/ev-test-drive/src/app/checkout/checkout-welcome/checkout-welcome.component.scss
+++ b/ui/ev-test-drive/src/app/checkout/checkout-welcome/checkout-welcome.component.scss
@@ -22,7 +22,7 @@
     }
 
     .welcomePane {
-      height: 715px;
+      height: 650px;
       width: 445px;
       background-color: #FFFFFF;
       overflow: visible;
@@ -34,11 +34,12 @@
 
       .titleText {
         color: #333333;
-        font-size: 45px;
+        font-size: 39px;
         font-weight: 500;
-        line-height: 51px;
+        line-height: 45px;
         letter-spacing: -0.93px;
         text-align: center;
+        margin-bottom: 15px;
       }
 
       .getStartedText {
@@ -50,6 +51,7 @@
         text-align: center;
         margin-left: 50px;
         margin-right: 50px;
+        margin-top: 15px;
       }
 
       .login-form {
@@ -97,7 +99,7 @@
         text-align: center;
         text-transform: uppercase;
         margin: 0;
-        margin-top: 45px;
+        margin-top: 15px;
         margin-left: 55px;
         background-color: $pink;
         border-radius: 4px;
